<resources>
    <string name="APPLICATION_ENVIRONMENT">prod</string>
    <string name="BUILD_IDENTIFIER">4984</string>
    <string name="BUILD_LABEL">UNITY</string>
    <string name="BUILD_VARIANT">prod</string>
    <string name="DATALAYER_ENVIRONMENT">prod</string>
    <string name="IS_AUTOMATION">false</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_persister_initialize_failed_error_description">The SDK was unable to initialize an instance of Account Persister</string>
    <string name="account_persister_initialize_recovery_suggestion">Please try clearing the app data and re-authenticating. If that fails, then please contact support.</string>
    <string name="account_persister_recovery_suggestion">Please try re-initializing the Account Persister or contact technical support</string>
    <string name="aiddescription">Application ID Description #8230;</string>
    <string name="alert_description">Alert</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Disneyland</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcenter_distribute_dialog_actioned_on_disabled_toast" />
    <string name="appcenter_distribute_download_progress_number_format" />
    <string name="appcenter_distribute_downloading_error" />
    <string name="appcenter_distribute_downloading_mandatory_update" />
    <string name="appcenter_distribute_downloading_update" />
    <string name="appcenter_distribute_install" />
    <string name="appcenter_distribute_install_ready_message" />
    <string name="appcenter_distribute_install_ready_title" />
    <string name="appcenter_distribute_notification_category" />
    <string name="appcenter_distribute_unknown_sources_dialog_message" />
    <string name="appcenter_distribute_unknown_sources_dialog_settings" />
    <string name="appcenter_distribute_update_dialog_download" />
    <string name="appcenter_distribute_update_dialog_message_mandatory" />
    <string name="appcenter_distribute_update_dialog_message_optional" />
    <string name="appcenter_distribute_update_dialog_postpone" />
    <string name="appcenter_distribute_update_dialog_title" />
    <string name="appcenter_distribute_update_dialog_view_release_notes" />
    <string name="appcenter_distribute_update_failed_dialog_ignore" />
    <string name="appcenter_distribute_update_failed_dialog_message" />
    <string name="appcenter_distribute_update_failed_dialog_reinstall" />
    <string name="appcenter_distribute_update_failed_dialog_title" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_config_package">com.dlp</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\n</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open DevTools</string>
    <string name="catalyst_debug_open_disabled">Connect to the bundler to debug JavaScript</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="contentsquare_developer_feature_flags_settings_button">Feature Flags</string>
    <string name="contentsquare_developer_session_replay_animation_detection_summary">Force the detection of animations</string>
    <string name="contentsquare_developer_session_replay_animation_detection_title">Force Animation detection</string>
    <string name="contentsquare_developer_session_replay_default_masking_summary">Pixelate views to anonymize content</string>
    <string name="contentsquare_developer_session_replay_default_masking_title">Session Replay masking</string>
    <string name="contentsquare_developer_session_replay_force_fps_summary">FPS of the Session Replay. Higher is better.</string>
    <string name="contentsquare_developer_session_replay_force_quality_level_summary">If disabled, quality may be decrease regarding performances</string>
    <string name="contentsquare_developer_session_replay_force_quality_level_title">Force Session Replay quality</string>
    <string name="contentsquare_developer_session_replay_force_start_summary">Force start of the Session Replay</string>
    <string name="contentsquare_developer_session_replay_force_start_title">Start Session Replay</string>
    <string name="contentsquare_developer_session_replay_image_quality_summary">Image resolution of the Session Replay. Higher is better.</string>
    <string name="contentsquare_developer_session_replay_image_quality_title">Quality level</string>
    <string name="contentsquare_developer_session_replay_logs_title">Logs</string>
    <string name="contentsquare_developer_session_replay_max_usage_times_ui_thread_summary">Overridden maximum time usage of Session Replay on UI Thread in milliseconds.</string>
    <string name="contentsquare_developer_session_replay_max_usage_times_ui_thread_title">Session Replay maximum time usage on UI thread</string>
    <string name="contentsquare_developer_session_replay_metrics_title">Metrics</string>
    <string name="contentsquare_developer_session_replay_preset_url_title">Select predefined SR endpoint</string>
    <string name="contentsquare_developer_session_replay_profiler_title">Profiler</string>
    <string name="contentsquare_developer_session_replay_settings">Session Replay</string>
    <string name="contentsquare_developer_session_timeout_zero_seconds_summary">If on, put the app in background and foreground again to start a new session</string>
    <string name="contentsquare_developer_session_timeout_zero_seconds_title">Session timeout to 0 seconds</string>
    <string name="contentsquare_developer_settings_category_title">Developer settings</string>
    <string name="contentsquare_session_replay_profiler_enabled_summary">If enabled, the profiler will collect statistics based on the enabled configuration.</string>
    <string name="contentsquare_session_replay_profiler_enabled_title">Enable Session Replay Profiler</string>
    <string name="contentsquare_settings_disable_in_app_feature_title">Disable in-app features</string>
    <string name="contentsquare_settings_log_visualizer_category_title">Log Visualizer</string>
    <string name="contentsquare_settings_log_visualizer_identifier_title">Identifier</string>
    <string name="contentsquare_settings_log_visualizer_summary">Logs will appear on your log-viz console. This happens on app start as well</string>
    <string name="contentsquare_settings_log_visualizer_title">Activate SDK logs stream</string>
    <string name="contentsquare_settings_long_snapshot_scroll_delay_summary">Delay when scrolling a RecyclerView or a lazy Compose list in milliseconds</string>
    <string name="contentsquare_settings_long_snapshot_scroll_delay_title">Snapshot Scroll Delay</string>
    <string name="contentsquare_settings_screengraph_optimization_summary">Remove views that are entirely covered by other views. Activating this setting does not visually impact the Session Replay.</string>
    <string name="contentsquare_settings_screengraph_optimization_title">Screengraph optimization</string>
    <string name="contentsquare_settings_send_debug_log_button">Send by email</string>
    <string name="contentsquare_settings_send_debug_log_summary">Gather recent logs and send them to Contentsquare support team</string>
    <string name="contentsquare_settings_send_debug_log_title">Send SDK debug information</string>
    <string name="contentsquare_settings_session_replay_category_title">Session Replay</string>
    <string name="contentsquare_settings_session_replay_summary">Records all user activities for screen replay</string>
    <string name="contentsquare_settings_session_replay_title">Enable Session Replay</string>
    <string name="contentsquare_settings_snapshot_mode_category_title">Snapshots</string>
    <string name="lightbox">lightbox</string>
    <string name="lightbox_background_image">lightbox_background_image</string>
    <string name="loader">loader</string>
    <string name="loader_spinner">loader_spinner</string>
    <string name="ua_delete_all">Delete all</string>
    <string name="ua_description_delete_all">Delete all messages</string>
    <string name="ua_description_mark_all_read">Mark all messages as read</string>
    <string name="ua_enter_edit_mode">Edit list</string>
    <string name="ua_leave_edit_mode">Stop editing list</string>
    <string name="ua_mark_all_read">Mark all read</string>
    <string name="ua_refresh">Refresh</string>
</resources>