<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/contentsquare_settings_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/contentsquare_value_16dp">
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
        android:textColor="@color/contentsquare_settings_toolbar_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp"
        android:text="@string/contentsquare_developer_session_replay_settings"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_force_start_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_force_start_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_force_start_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_default_masking_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_default_masking_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_default_masking_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_animation_detection_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_animation_detection_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_animation_detection_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_force_quality_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_force_quality_level_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_force_quality_level_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSeekBarPreference
        android:id="@+id/contentsquare_session_replay_force_fps_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_max_value="60"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_force_fps_summary"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSeekBarPreference
        android:id="@+id/contentsquare_session_replay_image_quality_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_max_value="2"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_image_quality_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_image_quality_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSeekBarPreference
        android:id="@+id/contentsquare_session_replay_ui_thread_usage_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_max_value="100"
        app:contentsquare_summary="@string/contentsquare_developer_session_replay_max_usage_times_ui_thread_summary"
        app:contentsquare_title="@string/contentsquare_developer_session_replay_max_usage_times_ui_thread_title"/>
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.BodyText"
        android:textColor="@color/contentsquare_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contentsquare_developer_session_replay_preset_url_title"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/contentsquare_session_replay_preset_url_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contentsquare_session_replay_url_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"/>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"/>
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
        android:textColor="@color/contentsquare_settings_toolbar_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp"
        android:text="@string/contentsquare_developer_session_replay_metrics_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareTextPreference
        android:id="@+id/contentsquare_log_visualizer_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="33"
        app:contentsquare_title="Fake metric"/>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"/>
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
        android:textColor="@color/contentsquare_settings_toolbar_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp"
        android:text="@string/contentsquare_developer_session_replay_profiler_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_profiler_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="@string/contentsquare_session_replay_profiler_enabled_summary"
        app:contentsquare_title="@string/contentsquare_session_replay_profiler_enabled_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contentsquare_session_replay_profiler_switches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"/>
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
        android:textColor="@color/contentsquare_settings_toolbar_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp"
        android:text="@string/contentsquare_developer_session_replay_logs_title"/>
    <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
        android:id="@+id/contentsquare_session_replay_logs_tree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentsquare_value_24dp"
        app:contentsquare_summary="Saves each frame of the user interface to disk, providing a detailed record for later analysis with Tree Inspector tool"
        app:contentsquare_title="Enable ViewLight logs"/>
</LinearLayout>
