<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/contentsquare_settings_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contentsquare_snapshot_mode_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentsquare_value_16dp"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp">
        <TextView
            android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
            android:textColor="@color/contentsquare_settings_toolbar_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_16dp"
            android:text="@string/contentsquare_settings_snapshot_mode_category_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSeekBarPreference
            android:id="@+id/contentsquare_long_snapshot_scroll_delay_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentsquare_max_value="1000"
            app:contentsquare_rounding_range="100"
            app:contentsquare_summary="@string/contentsquare_settings_long_snapshot_scroll_delay_summary"
            app:contentsquare_title="@string/contentsquare_settings_long_snapshot_scroll_delay_title"/>
    </LinearLayout>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contentsquare_session_replay_mode_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentsquare_value_16dp"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp">
        <TextView
            android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
            android:textColor="@color/contentsquare_settings_toolbar_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_16dp"
            android:text="@string/contentsquare_settings_session_replay_category_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
            android:id="@+id/contentsquare_session_replay_mode_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_24dp"
            app:contentsquare_summary="@string/contentsquare_settings_session_replay_summary"
            app:contentsquare_title="@string/contentsquare_settings_session_replay_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareTextPreference
            android:id="@+id/contentsquare_session_replay_link_copy_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentsquare_value_16dp">
        <TextView
            android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
            android:textColor="@color/contentsquare_settings_toolbar_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_16dp"
            android:text="@string/contentsquare_settings_log_visualizer_category_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
            android:id="@+id/contentsquare_log_visualizer_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentsquare_summary="@string/contentsquare_settings_log_visualizer_summary"
            app:contentsquare_title="@string/contentsquare_settings_log_visualizer_title"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/contentsquare_value_24dp"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareTextPreference
            android:id="@+id/contentsquare_log_visualizer_identifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentsquare_title="@string/contentsquare_settings_log_visualizer_identifier_title"/>
    </LinearLayout>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contentsquare_send_debug_log_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentsquare_value_16dp"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp">
        <TextView
            android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
            android:textColor="@color/contentsquare_settings_toolbar_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_16dp"
            android:text="@string/contentsquare_settings_send_debug_log_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareTextPreference
            android:id="@+id/contentsquare_send_debug_log_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentsquare_summary="@string/contentsquare_settings_send_debug_log_summary"
            app:contentsquare_title="@string/contentsquare_settings_send_debug_log_button"/>
    </LinearLayout>
    <View
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/contentsquare_developer_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentsquare_value_16dp"
        android:layout_marginBottom="@dimen/contentsquare_value_16dp">
        <TextView
            android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
            android:textColor="@color/contentsquare_settings_toolbar_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_16dp"
            android:text="@string/contentsquare_developer_settings_category_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
            android:id="@+id/contentsquare_screengraph_optimization_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_24dp"
            app:contentsquare_summary="@string/contentsquare_settings_screengraph_optimization_summary"
            app:contentsquare_title="@string/contentsquare_settings_screengraph_optimization_title"/>
        <com.contentsquare.android.analytics.internal.features.clientmode.ui.settings.components.ContentsquareSwitchPreference
            android:id="@+id/contentsquare_session_timeout_zero_seconds_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_24dp"
            app:contentsquare_summary="@string/contentsquare_developer_session_timeout_zero_seconds_summary"
            app:contentsquare_title="@string/contentsquare_developer_session_timeout_zero_seconds_title"/>
        <Button
            android:id="@+id/contentsquare_sr_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_24dp"
            android:text="@string/contentsquare_developer_session_replay_settings"
            style="@style/contentsquare_button"/>
        <Button
            android:id="@+id/contentsquare_feature_flags_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contentsquare_value_24dp"
            android:text="@string/contentsquare_developer_feature_flags_settings_button"
            style="@style/contentsquare_button"/>
        <View
            android:background="#44000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <TextView
        android:textAppearance="@style/contentsquare_AppTheme.TextAppearance.H4"
        android:textColor="@color/contentsquare_settings_disable_in_app_feature_text_color"
        android:id="@+id/contentsquare_disable_in_app_features"
        android:padding="@dimen/contentsquare_value_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contentsquare_settings_disable_in_app_feature_title"/>
</LinearLayout>
